# Improved-ALNS-with-Platooning-Mechanism

./: ALNS_Parameters.h  AlternativePaths.cpp  AlternativePaths.h  CMakeLists.txt  DataDealer.cpp  DataDealer.h  HeuristicFramework.cpp  HeuristicFramework.h  InitFeasSol.cpp  InitFeasSol.h  PlatoonMaker.cpp  PlatoonMaker.h  ResultWriter.cpp  ResultWriter.h  TimeWindowUpdater.cpp  TimeWindowUpdater.h  config.h  main.cpp  param.xml  readme.md  utility.cpp  utility.h
ALNS/: ALNS.cpp  ALNS.h  Statistics.cpp  Statistics.h
couplingVRP/: AlternativePaths.h  DataDealer.h  HeuristicFramework.h  InitFeasSol.h  Operators_inc.h  PlatoonMaker.h  VRP_inc.h  config.h  utility.h
couplingVRP/model/: ADijkstraSol.cpp  ADijkstraSol.h  APlatoon.cpp  APlatoon.h  ARoute.cpp  ARoute.h  AvailablePaths.cpp  AvailablePaths.h  HeuristicFramework.cpp  HeuristicFramework.h  InitFeasSol.cpp  KSPBuilder.cpp  KSPBuilder.h  Nodes.cpp  Nodes.h  NodesManager.cpp  NodesManager.h  PlatoonMaker.cpp  PlatoonMaker.h  PlatoonsOneArc.h  RawInstance.cpp  RawInstance.h  ResultWriter.cpp  ResultWriter.h  TimeWindowUpdater.cpp  TimeWindowUpdater.h  VRPSolution.cpp  VRPSolution.h  Vehicles.cpp  Vehicles.h  VehiclesManager.cpp  VehiclesManager.h  config copy.h  config.h  utility.cpp  utility.h
couplingVRP/operators/: Node_Modified_Shaw_Removal.cpp  Node_Modified_Shaw_Removal.h  Node_Null_Destroy.cpp  Node_Null_Destroy.h  Operators_Parameters.cpp  Operators_Parameters.h  Path_Null_Destroy.cpp  Path_Null_Destroy.h
dataset/: readme.md
dataset/Large_Dataset/: 100_cluster_even_1.txt  100_cluster_even_2.txt  100_cluster_even_3.txt  100_cluster_peak_1.txt  100_cluster_peak_2.txt  100_cluster_peak_3.txt  100_uniform_even_1.txt  100_uniform_even_2.txt  100_uniform_even_3.txt  100_uniform_peak_1.txt  100_uniform_peak_2.txt  100_uniform_peak_3.txt  250_cluster_even_1.txt  250_cluster_even_2.txt  250_cluster_even_3.txt  250_cluster_peak_1.txt  250_cluster_peak_2.txt  250_cluster_peak_3.txt  250_uniform_even_1.txt  250_uniform_even_2.txt  250_uniform_even_3.txt  250_uniform_peak_1.txt  250_uniform_peak_2.txt  250_uniform_peak_3.txt  500_cluster_even_1.txt  500_cluster_even_2.txt  500_cluster_even_3.txt  500_cluster_peak_1.txt  500_cluster_peak_2.txt  500_cluster_peak_3.txt  500_uniform_even_1.txt  500_uniform_even_2.txt  500_uniform_even_3.txt  500_uniform_peak_1.txt  500_uniform_peak_2.txt  500_uniform_peak_3.txt  50_cluster_even_1.txt  50_cluster_even_2.txt  50_cluster_even_3.txt  50_cluster_peak_1.txt  (+8 more)
dataset/Small_Benchmark/: test1.txt  test2.txt
dataset/Small_Dataset/: test1.txt  test2.txt
include/: utility.h
include/alns/: ALNS_inc.h
include/example/: Operators_inc.h  VRP_inc.h
result/solutions/: (example 1) 50_cluster_even_1_alns_solution_wt_noise.txt  (example 1) 50_cluster_even_1_initial_solution.txt  (example 2) 50_cluster_even_1_alns_solution_wo_noise.txt  (example 2) 50_cluster_even_1_initial_solution.txt  (example 3) 100_cluster_peak_1_alns_solution_wt_noise.txt  (example 3) 100_cluster_peak_1_initial_solution.txt  (example 4) 100_cluster_peak_1_alns_solution_wt_noise.txt  (example 4) 100_cluster_peak_1_initial_solution.txt  (example 5) 250_cluster_peak_1_alns_solution_wt_noise.txt  (example 5) 250_cluster_peak_1_initial_solution.txt  (example 6) 250_cluster_peak_1_alns_solution_wt_noise.txt  (example 6) 250_cluster_peak_1_initial_solution.txt  100_cluster_even_1_alns_solution_wt_noise.txt  100_cluster_even_1_initial_solution.txt  100_cluster_peak_1_alns_solution_wo_noise.txt  100_cluster_peak_1_alns_solution_wt_noise.txt  100_cluster_peak_1_initial_solution.txt  100_cluster_peak_2_alns_solution_wt_noise.txt  100_cluster_peak_2_initial_solution.txt  100_cluster_peak_3_alns_solution_wt_noise.txt  100_cluster_peak_3_initial_solution.txt  50_cluster_even_1_alns_solution_wo_noise.txt  50_cluster_even_1_alns_solution_wt_noise.txt  50_cluster_even_1_initial_solution.txt  50_cluster_peak_1_alns_solution_wt_noise.txt  50_cluster_peak_1_initial_solution.txt  test2_alns_optimal_solution.txt  test2_alns_solution.txt  test2_alns_solution_wo_noise.txt  test2_alns_solution_wt_noise.txt  test2_initial_solution.txt  test2_mip_optimal_solution.txt
result/stats/: globStats_100_cluster_even_1.txt  globStats_100_cluster_peak_1.txt  globStats_100_cluster_peak_2.txt  globStats_100_cluster_peak_3.txt  globStats_250_cluster_peak_1.txt  globStats_50_cluster_even_1.txt  globStats_50_cluster_peak_1.txt  globStats_couplingVRP.txt  globStats_test2.txt  opStats_100_cluster_even_1.txt  opStats_100_cluster_peak_1.txt  opStats_100_cluster_peak_2.txt  opStats_100_cluster_peak_3.txt  opStats_250_cluster_peak_1.txt  opStats_50_cluster_even_1.txt  opStats_50_cluster_peak_1.txt  opStats_couplingVRP.txt  opStats_test2.txt
src/: ALNS_inc.h  main.cpp  param.xml  readme.md  utility.cpp
src-code/: main.cpp  utility.cpp
src-code/dataset/: readme.md
src/acceptanceModule/: CoolingScheduleFactory.cpp  CoolingScheduleFactory.h  CoolingScheduleParametersOptimizable.h  CoolingSchedule_Parameters.cpp  CoolingSchedule_Parameters.h  DummyAcceptanceModule.cpp  DummyAcceptanceModule.h  ExponentialCoolingSchedule.cpp  ExponentialCoolingSchedule.h  IAcceptanceModule.h  MixExponentialCoolingSchedule.cpp  MixExponentialCoolingSchedule.h  SimulatedAnnealing.h
src/alns/: ALNS.cpp  ALNS.h  ALNS_Iteration_Status.h  ALNS_Parameters.h  ANodeDestroyOperator.h  ANodeRepairOperator.h  AOperator.h  APathDestroyOperator.cpp  APathDestroyOperator.h  APathRepairOperator.h  IBestSolutionManager.h  IUpdatable.h  OperatorManager.cpp  SimpleBestSolutionManager.cpp  (+1 more)
(+246 files in other folders)
